{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 35,
  "lineage": "2dc72380-541f-488d-04b4-d36ac0c637c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:internet-gateway/igw-06e268426305da7e4",
            "id": "igw-06e268426305da7e4",
            "owner_id": "172807803624",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-igw",
              "Project": "tastylog"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-igw",
              "Project": "tastylog"
            },
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt_igw_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e268426305da7e4",
            "id": "r-rtb-014fac605f19875351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014fac605f1987535",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:route-table/rtb-0b390f4780211399a",
            "id": "rtb-0b390f4780211399a",
            "owner_id": "172807803624",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-private-rt",
              "Project": "tastylog",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-private-rt",
              "Project": "tastylog",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:route-table/rtb-014fac605f1987535",
            "id": "rtb-014fac605f1987535",
            "owner_id": "172807803624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e268426305da7e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-public-rt",
              "Project": "tastylog",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-public-rt",
              "Project": "tastylog",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0425c0a54e3f8c24e",
            "route_table_id": "rtb-0b390f4780211399a",
            "subnet_id": "subnet-026421e709b78e6d8"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6510460423bacc5",
            "route_table_id": "rtb-0b390f4780211399a",
            "subnet_id": "subnet-03105d9005a4403d9"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecc0d8fdecaf3b78",
            "route_table_id": "rtb-014fac605f1987535",
            "subnet_id": "subnet-0493a30f50fe5f6e4"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0498f06dc2286b1df",
            "route_table_id": "rtb-014fac605f1987535",
            "subnet_id": "subnet-0fd3a315672895ff6"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:security-group/sg-0ede2ce9957feeaf7",
            "description": "app server role security group",
            "egress": [],
            "id": "sg-0ede2ce9957feeaf7",
            "ingress": [],
            "name": "tastylog-dev-app-sg",
            "name_prefix": "",
            "owner_id": "172807803624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-app-sg",
              "Project": "tastylog"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-app-sg",
              "Project": "tastylog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:security-group/sg-04824c4e88d1077d7",
            "description": "db server role security group",
            "egress": [],
            "id": "sg-04824c4e88d1077d7",
            "ingress": [],
            "name": "tastylog-dev-db-sg",
            "name_prefix": "",
            "owner_id": "172807803624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-db-sg",
              "Project": "tastylog"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-db-sg",
              "Project": "tastylog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opmng_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:security-group/sg-0ca24310261979aa4",
            "description": "operation and management server role security group",
            "egress": [],
            "id": "sg-0ca24310261979aa4",
            "ingress": [],
            "name": "tastylog-dev-opmng-sg",
            "name_prefix": "",
            "owner_id": "172807803624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-opmng-sg",
              "Project": "tastylog"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-opmng-sg",
              "Project": "tastylog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:security-group/sg-00735e30fcb78b8ec",
            "description": "web front role security group",
            "egress": [],
            "id": "sg-00735e30fcb78b8ec",
            "ingress": [],
            "name": "tastylog-dev-web-sg",
            "name_prefix": "",
            "owner_id": "172807803624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-web-sg",
              "Project": "tastylog"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-web-sg",
              "Project": "tastylog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_in_tcp3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-307083501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04824c4e88d1077d7",
            "security_group_rule_id": "sgr-0dae95a0293ac563c",
            "self": false,
            "source_security_group_id": "sg-0ede2ce9957feeaf7",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.db_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "opmng_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2821437394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca24310261979aa4",
            "security_group_rule_id": "sgr-02ab1326147600930",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.opmng_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "opmng_in_tcp3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-3586788487",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca24310261979aa4",
            "security_group_rule_id": "sgr-049dc345a035f765e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.opmng_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "opmng_out_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2865732292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca24310261979aa4",
            "security_group_rule_id": "sgr-09624aa5f8832b9a9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.opmng_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "opmng_out_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1177179618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca24310261979aa4",
            "security_group_rule_id": "sgr-02ce06e0a1be9375c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.opmng_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1263056351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00735e30fcb78b8ec",
            "security_group_rule_id": "sgr-0140ed088382b9ab8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-461944681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00735e30fcb78b8ec",
            "security_group_rule_id": "sgr-0cf2b700de046d04c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_out_tcp3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3000,
            "id": "sgrule-210882916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00735e30fcb78b8ec",
            "security_group_rule_id": "sgr-08f1324ec4684bea7",
            "self": false,
            "source_security_group_id": "sg-0ede2ce9957feeaf7",
            "timeouts": null,
            "to_port": 3000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:subnet/subnet-026421e709b78e6d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026421e709b78e6d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172807803624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-private-subnet-1a",
              "Project": "tastylog",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-private-subnet-1a",
              "Project": "tastylog",
              "Type": "private"
            },
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:subnet/subnet-03105d9005a4403d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03105d9005a4403d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172807803624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-private-subnet-1c",
              "Project": "tastylog",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-private-subnet-1c",
              "Project": "tastylog",
              "Type": "private"
            },
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:subnet/subnet-0493a30f50fe5f6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0493a30f50fe5f6e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "172807803624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-public-subnet-1a",
              "Project": "tastylog",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-public-subnet-1a",
              "Project": "tastylog",
              "Type": "public"
            },
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:subnet/subnet-0fd3a315672895ff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd3a315672895ff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "172807803624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-public-subnet-1c",
              "Project": "tastylog",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-public-subnet-1c",
              "Project": "tastylog",
              "Type": "public"
            },
            "vpc_id": "vpc-0de0b68e3e0fc86d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:172807803624:vpc/vpc-0de0b68e3e0fc86d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-036e8fe1dc83817fa",
            "default_route_table_id": "rtb-037596b0df89d357a",
            "default_security_group_id": "sg-02ea4cc55875e7fda",
            "dhcp_options_id": "dopt-0ddc59af050c3a6e8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de0b68e3e0fc86d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037596b0df89d357a",
            "owner_id": "172807803624",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-vpc",
              "Project": "tastylog"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-vpc",
              "Project": "tastylog"
            }
          }
        }
      ]
    }
  ]
}